# open-frame-studio

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  live.yml  release.yml
ofs-core/: Cargo.toml
ofs-core/src/: calculation.rs  edge.rs  geometry.rs  grid.rs  hardware.rs  joint.rs  kozijn.rs  lib.rs  production.rs  sill.rs  validation.rs  vliesgevel_geometry.rs  vliesgevel_production.rs
ofs-core/src/export/: csv_production.rs  dxf.rs  gltf.rs  ifc.rs  mod.rs  pdf.rs  xlsx.rs
ofs-core/src/import/: catalog.rs  dxf_profile.rs  mod.rs
ofs-core/src/vliesgevel/: core.rs  grid.rs  mod.rs  production.rs  validation.rs
ofs-wasm/: Cargo.toml
ofs-wasm/src/: lib.rs
python/: main.py
python/ofs_gltf/: __init__.py  generator.py
python/ofs_ifc/: ils_properties.py
python/ofs_production/: __init__.py  csv_generator.py  pdf_generator.py  xlsx_generator.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  state.rs
src-tauri/src/commands/: calculation.rs  export_dxf.rs  export_gltf.rs  export_ifc.rs  export_pdf.rs  export_production.rs  export_workshop.rs  import_profile.rs  kozijn.rs  mod.rs  production.rs  profiles.rs  settings.rs  vliesgevel.rs
ui/: package-lock.json  package.json  svelte.config.js
ui/src/: App.svelte  main.js
ui/src/components/editor/: CellContextMenu.svelte  DimensionOverlay.svelte  GridHandles.svelte  KozijnCanvas.svelte  KozijnEditor.svelte  VliesgevalCanvas.svelte  VliesgevalEditor.svelte
ui/src/components/panels/: AiAssistant.svelte  GlazingPanel.svelte  HardwarePanel.svelte  ProfileCrossSection.svelte  ProfileEditor.svelte  ProfilePreview.svelte  ProfileSelector.svelte  PropertiesPanel.svelte  ShapeManager.svelte
ui/src/components/profile-editor/: EdgeSegments.svelte  ProfileCanvas.svelte  ProfileEditorView.svelte  ProfileLibrary.svelte  ProfileParams.svelte  ProfileToolbar.svelte  VertexHandles.svelte
ui/src/components/project/: BcfView.svelte  (+10 more)
ui/src/lib/: aiSystemPrompt.js  aiTools.js  api.js  export.js  i18n.js  labels.js  project-actions.js  settings.js  shortcuts.js  tauri.js  web-dialogs.js
ui/src/locales/: de.json  en.json  nl.json
ui/src/stores/: aiAssistant.js  history.js  kozijn.js  production.js  profileEditor.js  profiles.js  project.js  toast.js  ui.js  vliesgevel.js
ui/src/styles/: app.css  tokens.css
(+8 files in other folders)
