[package]
name = "ofs-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
printpdf = { version = "0.9", optional = true }
rust_xlsxwriter = { version = "0.94", optional = true }
chrono = { version = "0.4", optional = true }
calamine = { version = "0.34", optional = true }

[features]
default = ["export", "import"]
export = ["dep:printpdf", "dep:rust_xlsxwriter", "dep:chrono"]
import = ["dep:calamine"]
